--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </div>
   </div>
   
-  <img id="Kacchye" src="./Kacchye.png" alt="">
+  <img id="Kacchye" src="./Kacchye.png" alt="error">
 
 </body>
 <!-- partial -->
