--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </div>
   </div>
   
-  <img id="Kacchye" src="./Kacchye.png" alt="error">
+  <img id="Kacchye" src="https://github.com/icarovisyon/icarovisyon.github.io/blob/main/kacchye.png" alt="error">
 
 </body>
 <!-- partial -->
