--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </div>
   </div>
   
-  <img id="Kacchye" src="./kacchye.png" alt="error">
+  <img id="Kacchye" src="https://i.postimg.cc/QxQDsTQK/kacchye.png" alt="error">
 
 </body>
 <!-- partial -->
