--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Kacchye</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./coracao.png" type="image/x-icon"> <!-- Compatibilidade com Browser muito antigos-->
+  <link rel="icon" href="./coracao.png" sizes="32x32">
 
 </head>
 <body>
